{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 282,
  "lineage": "206c16ea-56d8-6e70-0b02-79eeab6bb3d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a787994b6f123a6",
            "domain": "vpc",
            "id": "eipalloc-06a787994b6f123a6",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-18-200-113-102.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.200.113.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nodeapp-final-ngw-ip"
            },
            "tags_all": {
              "Name": "nodeapp-final-ngw-ip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:internet-gateway/igw-0bfac93b554d05d35",
            "id": "igw-0bfac93b554d05d35",
            "owner_id": "310349270317",
            "tags": {
              "Name": "nodeapp-final-igw"
            },
            "tags_all": {
              "Name": "nodeapp-final-igw"
            },
            "vpc_id": "vpc-09fe054cce7083642"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a787994b6f123a6",
            "connectivity_type": "public",
            "id": "nat-071f2791cc16dee4a",
            "network_interface_id": "eni-0f467a41327f5b6d7",
            "private_ip": "10.1.0.60",
            "public_ip": "18.200.113.102",
            "subnet_id": "subnet-0667a54a202e017d8",
            "tags": {
              "Name": "nodeapp-final-ngw"
            },
            "tags_all": {
              "Name": "nodeapp-final-ngw"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_internet_gateway.my_vpc_igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0729fedd2139fa68e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-071f2791cc16dee4a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0729fedd2139fa68e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip",
            "aws_internet_gateway.my_vpc_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_eu_west_1a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:route-table/rtb-038091ca023315679",
            "id": "rtb-038091ca023315679",
            "owner_id": "310349270317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bfac93b554d05d35",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nodeapp-final-default-rt"
            },
            "tags_all": {
              "Name": "nodeapp-final-default-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fe054cce7083642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099290aed003545df",
            "route_table_id": "rtb-038091ca023315679",
            "subnet_id": "subnet-0667a54a202e017d8"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.my_vpc_eu_west_1a_public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00491f87175454438",
            "route_table_id": "rtb-038091ca023315679",
            "subnet_id": "subnet-03c2dc35e4cad8d46"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.my_vpc_eu_west_1a_public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:security-group/sg-0c26e172c2cda325f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c26e172c2cda325f",
            "ingress": [],
            "name": "nodeapp-final-ControlPlane-sg",
            "name_prefix": "",
            "owner_id": "310349270317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nodeapp-final-ControlPlane-sg"
            },
            "tags_all": {
              "Name": "nodeapp-final-ControlPlane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fe054cce7083642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:security-group/sg-05cc2fdc3e06b77e9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05cc2fdc3e06b77e9",
            "ingress": [],
            "name": "nodeapp-final-worker-sg",
            "name_prefix": "",
            "owner_id": "310349270317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nodeapp-final-worker-sg"
            },
            "tags_all": {
              "Name": "nodeapp-final-worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fe054cce7083642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:security-group/sg-08ddafd11b0403a3d",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-08ddafd11b0403a3d",
            "ingress": [],
            "name": "nodeapp-final-cluster-sg",
            "name_prefix": "",
            "owner_id": "310349270317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nodeapp-final-cluster-sg"
            },
            "tags_all": {
              "Name": "nodeapp-final-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fe054cce7083642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:security-group/sg-02c96690b48e715fc",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c96690b48e715fc",
            "ingress": [],
            "name": "nodeapp-final-node-sg",
            "name_prefix": "",
            "owner_id": "310349270317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nodeapp-final-node-sg"
            },
            "tags_all": {
              "Name": "nodeapp-final-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fe054cce7083642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:security-group/sg-0a68a559b907550f5",
            "description": "Security group for database",
            "egress": [],
            "id": "sg-0a68a559b907550f5",
            "ingress": [],
            "name": "nodeapp-final-mysql-db-sg",
            "name_prefix": "",
            "owner_id": "310349270317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nodeapp-final-mysql-db-sg"
            },
            "tags_all": {
              "Name": "nodeapp-final-mysql-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fe054cce7083642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:security-group/sg-0ef9adaf07129c7a5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ef9adaf07129c7a5",
            "ingress": [],
            "name": "nodeapp-final-public-sg",
            "name_prefix": "",
            "owner_id": "310349270317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nodeapp-final-public-sg"
            },
            "tags_all": {
              "Name": "nodeapp-final-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fe054cce7083642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3900513973",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08ddafd11b0403a3d",
            "security_group_rule_id": "sgr-030355d664acc9a6a",
            "self": false,
            "source_security_group_id": "sg-02c96690b48e715fc",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-2942397280",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08ddafd11b0403a3d",
            "security_group_rule_id": "sgr-0a635b24b09951b38",
            "self": false,
            "source_security_group_id": "sg-02c96690b48e715fc",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.0.0/24",
              "10.1.1.0/24",
              "10.1.2.0/24",
              "10.1.3.0/24"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1982257287",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c26e172c2cda325f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1085231115",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c26e172c2cda325f",
            "security_group_rule_id": "sgr-08c3b3526d01e27ba",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mysql_db_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.2.0/24",
              "10.1.3.0/24"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1980106059",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a68a559b907550f5",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysql_db_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2175532121",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05cc2fdc3e06b77e9",
            "security_group_rule_id": "sgr-00d48129a38521c22",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.0.0/24",
              "10.1.1.0/24",
              "10.1.2.0/24",
              "10.1.3.0/24"
            ],
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1291339066",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05cc2fdc3e06b77e9",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3399983913",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02c96690b48e715fc",
            "security_group_rule_id": "sgr-019789ea16e4c953b",
            "self": false,
            "source_security_group_id": "sg-08ddafd11b0403a3d",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.2.0/24",
              "10.1.3.0/24"
            ],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-1106610120",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05cc2fdc3e06b77e9",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3333736607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02c96690b48e715fc",
            "security_group_rule_id": "sgr-0e0bd1da5f145f39b",
            "self": false,
            "source_security_group_id": "sg-02c96690b48e715fc",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-412407325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ef9adaf07129c7a5",
            "security_group_rule_id": "sgr-0d259845028af0857",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-34201256",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ef9adaf07129c7a5",
            "security_group_rule_id": "sgr-092f9d71c6ae2224b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:subnet/subnet-0ef84e7aaf258f7c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef84e7aaf258f7c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "310349270317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodeapp-final-private-sub"
            },
            "tags_all": {
              "Name": "nodeapp-final-private-sub"
            },
            "vpc_id": "vpc-09fe054cce7083642"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:subnet/subnet-03fa5565356c8d414",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fa5565356c8d414",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "310349270317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodeapp-final-private-sub"
            },
            "tags_all": {
              "Name": "nodeapp-final-private-sub"
            },
            "vpc_id": "vpc-09fe054cce7083642"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:subnet/subnet-0667a54a202e017d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0667a54a202e017d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "310349270317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodeapp-final-public-sub"
            },
            "tags_all": {
              "Name": "nodeapp-final-public-sub"
            },
            "vpc_id": "vpc-09fe054cce7083642"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:subnet/subnet-03c2dc35e4cad8d46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c2dc35e4cad8d46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "310349270317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodeapp-final-public-sub"
            },
            "tags_all": {
              "Name": "nodeapp-final-public-sub"
            },
            "vpc_id": "vpc-09fe054cce7083642"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:310349270317:vpc/vpc-09fe054cce7083642",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-00ede57e1d63d720c",
            "default_route_table_id": "rtb-0729fedd2139fa68e",
            "default_security_group_id": "sg-0015d4b80a64d4a87",
            "dhcp_options_id": "dopt-04903b2baf27a1371",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09fe054cce7083642",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0729fedd2139fa68e",
            "owner_id": "310349270317",
            "tags": {
              "Name": "nodeapp-final-main-vpc"
            },
            "tags_all": {
              "Name": "nodeapp-final-main-vpc"
            }
          }
        }
      ]
    }
  ]
}